tests/types/errors/match_result_mismatch.mochi
let x: int = match 1 {
  _ => "one"
}
