tests/types/errors/match_result_mismatch.err
1. error[T008]: type mismatch: expected int, got string
  --> tests/types/errors/match_result_mismatch.mochi:2:8

  2 |   _ => "one"
    |        ^

help:
  Change the value to match the expected type.
